# struct-helpers

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
src/: lib.rs  main.rs  rocket.rs
struct-helpers-macro/: Cargo.toml
struct-helpers-macro/src/: lib.rs
struct-helpers-rocket/: Cargo.toml
struct-helpers-rocket/src/: lib.rs
struct-helpers-rocket/tests/: rocket_guard_test.rs
struct-helpers-trait/: Cargo.toml
struct-helpers-trait/src/: lib.rs
tests/: builtins_test.rs  integration_test.rs  optional_test.rs  regex_test.rs  rocket_guard_test.rs  validation.rs  with_parms_test.rs
