[package]
name = "struct-helpers"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
struct-helpers-macro = { path = "struct-helpers-macro", version = "0.0.0", optional = true }
rocket = { version = "0.5.0", default-features = false, features = [ "json" ], optional = true }
serde = { version = "1.0", features = [ "derive" ], optional = true }
serde_json = { version = "1.0", optional = true }
serde_with = { version = "3.0.0", optional = true }
regex = { version = "1.7", optional = true }

[features]
default = [ "derive" ]
derive = [ "struct-helpers-macro" ]
rocket = [ "dep:rocket", "dep:serde", "dep:serde_json" ]
regex = [ "dep:regex" ]
dev = [ "dep:serde_with" ]

[workspace]
members = [ "struct-helpers-macro" ]

# enable all features in doctests
[package.metadata."docs.rs"]
all-features = true
